EmrEtlRunner: now invoking Scala Hadoop Shredder after main job (#644)
EmrEtlRunner: added --skip shred option (#659)
StorageLoader: bumped to 0.3.0
StorageLoader: added ACCEPTINVCHARS to StorageLoader (#411)
StorageLoader: wrote JSON Path files for ad_* events (#642)
StorageLoader: wrote JSON Path file for link_click (#599)
StorageLoader: wrote JSON Path file for screen_view (#643)
StorageLoader: added hosted_assets setting for StorageLoader (#606)
StorageLoader: added ability to load custom tables using JSON Paths (#607)              - TODO
StorageLoader: added --skip shred option (#660)                                         - TODO
Redshift: added Redshift DDL for ad_* events (#639)
Redshift: added Redshift DDL for link_click events (#600)
Redshift: added Redshift DDL for screen_view events (#640)
Redshift: added Redshift DDL for website's page_context (#771)
Looker Analytics: improved existing LookML definitions to 0.2.0 (#697)
Looker Analytics: wrote LookML for ad_* events (#605)
Looker Analytics: wrote LookML for screen_view events (#637)
Looker Analytics: wrote LookML for link_click events (#636)
Looker Analytics: wrote LookML for website's page_context (#770)                        - TODO

Version 0.9.4 (2014-05-30)
---------------------------
Redshift: added reference_data.country_codes (#779)
Postgres: added reference_data.country_codes (#781) 
Looker Analytics: New 'traffic_pulse' dashboard with globally configurable drill-down variables (#765)
Looker Analytics: Snowplow website specific dimensions and metrics removed: base model is now company-generic (#764)
Looker Analytics: cleaner joining of data sets in Looker model (#763)
Looker Analytics: dimensions and metrics renamed to make it clearer for an analyst getting started with the data (#761)
Looker Analytics: added distkeys and sortkeys to derived tables to speed up query times (#696)
Looker Analytics: derived tables now auto-generated when new data is loaded into atomic.events (#688)